--- a/SmartHouse.MVC/Views/Admin/Home.cshtml
+++ b/SmartHouse.MVC/Views/Admin/Home.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UsersWithPaginationModel
 
-<a class="btn btn-primary" asp-action="CreateUser">Create User</a>
+<a class="btn btn-primary" href="CreateUser">Create User</a>
 @*<div class="dropdown">
     <a class="btn btn-secondary dropdown-toggle" asp-action="Home" asp-controller="Admin" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         @Model.PageInfo.PageSize
