--- a/SmartHouse.MVC/Views/Home/Index.cshtml
+++ b/SmartHouse.MVC/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Some text about company.</p>
+    <p>Some text about a company.</p>
 </div>
